--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- <script src="data/injuries/injuries.js"></script> -->
-    <!-- <script src="data/lol/lol.js"></script> -->
-    <!-- <script src="data/patient/patient.js"></script> -->
-    <!-- <script src="data/pokemon/pokemon.js"></script> -->
-    <!-- <script src="data/rickandmorty/rickandmorty.js"></script> -->
-    <!-- <script src="data/steam/steam.js"></script> -->
-    <!-- <script src="data/worldbank/worldbank.js"></script> -->
-    <script src="data.js"></script>
-    <script src="main.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Pokémon!</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <img src="pokemon.png" class="imagePokeflix" />
+    <div class="select-order">
+      <select id="orderName" class="select-order-name">
+        <option value="none">Ordenar por:</option>
+        <option value="select-A-Z">A - Z</option>
+        <option value="select-Z-A">Z - A</option>
+      </select>
+      <div class="input-search">
+        <input id="input-name" placeholder="pesquise por nome">
+      </div>
+      <div class="select-type">
+        <select id="orderType">
+          <option value="none">Filtrar por tipo:</option>
+          <option value="Bug">Bug</option>
+          <option value="Dragon">Dragon</option>
+          <option value="Electric">Electric</option>
+          <option value="Fighting">Fighting</option>
+          <option value="Flying">Flying</option>
+          <option value="Fire">Fire</option>
+          <option value="Ghost">Ghost</option>
+          <option value="Grass">Grass</option>
+          <option value="Ground">Ground</option>
+          <option value="Ice">Ice</option>
+          <option value="Normal">Normal</option>
+          <option value="Poison">Poison</option>
+          <option value="Psychic">Psychic</option>
+          <option value="Rock">Rock</option>
+          <option value="Water">Water</option>
+        </select>
+      </div>     
+    </div>
+  </header>
+  <main>
+    <div id="porcentagem"></div>
+    <div class="container" id="listaCards"></div>
+    <div id="filtro"></div>
+  </main>
+
+  <script src="data/pokemon/pokemon.js"></script>
+  <script src="main.js"></script>
+  <script src="data.js"></script>
+
+</body>
+
 </html>
